Closed Bug 406719 Opened 18 years ago Closed 18 years ago

Fix window positioning and sizing under UI scaling

Categories

(Camino Graveyard :: General, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino2.0

People

(Reporter: stuart.morgan+bugzilla, Assigned: stuart.morgan+bugzilla)

References

Details

Attachments

(2 files, 1 obsolete file)

Our window positioning and sizing code (both setting and reporting back to Gecko) assumes that Gecko coordinates and window frame coordinates are at the same scale factor, which they aren't under UI scaling, totally horking the calculations (see bug 406717 comment 1 for reference)
Attached file partial testcase (obsolete) —
This tests basic positioning and sizing (but not any of the getters, nor all of the sizing that can be done).
Attached patch patchSplinter Review
This is only partially tested, but I think it's right. Posting as a reference while I get more tests together.
Attached file better test
This is a more thorough test, covering all the things I touched.
Attachment #291383 - Attachment is obsolete: true
Comment on attachment 291384 [details] [diff] [review] patch This appears to be correct for everything but screen size, which I'm about to file another bug for. Smokey, care to take it for a spin?
Attachment #291384 - Flags: review?(alqahira)
Comment on attachment 291384 [details] [diff] [review] patch Patch fixes scaling errors for me when using a higher DPI. r=jeff
Attachment #291384 - Flags: review?(alqahira) → review+
Attachment #291384 - Flags: superreview?(mikepinkerton)
Comment on attachment 291384 [details] [diff] [review] patch sr=pink
Attachment #291384 - Flags: superreview?(mikepinkerton) → superreview+
Landed on trunk.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: