Camino only - Bug 406719: Fix JS window sizing/positioning under UI scaling. r=jeff sr=pink